# kte-collaborative

./: .directory  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Messages.sh  README  TODO  kte_collab_debug.cpp  kte_collab_debug.h  version.h.in
common/: CMakeLists.txt  connection.cpp  connection.h  document.cpp  document.h  documentbuilder.cpp  documentbuilder.h  documentmodel.cpp  itemfactory.cpp  itemfactory.h  kobbycommon_export.h  ktecollaborative_export.h  noteplugin.cpp  noteplugin.h  selecteditorwidget.cpp  selecteditorwidget.h  testbufferinterface.cpp  utils.cpp  utils.h
common/ui/: notifywidget.qml  remotechangenotifier.cpp  remotechangenotifier.h
kded-module/: CMakeLists.txt  infinotenotifier.cpp  infinotenotifier.desktop  infinotenotifier.h  infinotenotifier.notifyrc
kioslave/: CMakeLists.txt  infinity.protocol  kio_infinity.cpp  kio_infinity.h
kobby/: .gitignore  CMakeLists.txt  addconnectiondialog.cpp  addconnectiondialog.h  addconnectiondialog.ui  configdialog.h  connection.cpp  connection.h  connectionlistwidgetitem.cpp  connectionlistwidgetitem.h  connectionmanager.cpp  connectionmanager.h  connectionmanager.ui  connectionmanagerlistitem.cpp  connectionmanagerlistitem.h  documentchangetracker.cpp  documentchangetracker.h  filebrowser.cpp  filebrowser.h  infinotemanager.cpp  infinotemanager.h  joinsessiondialog.cpp  kobbyplugin.cpp  kobbyplugin.h  kobbypluginview.cpp  kobbypluginview.h  kobbysettings.cpp  kobbysettings.h  kobbyui.rc  ktexteditor_kobby.desktop  ktexteditor_kobbyui.rc  main.cpp  manageddocument.cpp  manageddocument.h  plugin.cpp  utils.cpp  utils.h
kobby/data/: CMakeLists.txt  kobby.desktop  kobbysettings.kcfg  kobbysettings.kcfgc  kobbyui.rc  ktexteditor_kobby.desktop  ktexteditor_kobby_config.desktop  ktexteditor_kobby_settings.desktop  ktexteditor_kobbyui.rc
kobby/dialogs/: addconnectiondialog.cpp  addconnectiondialog.h  addconnectiondialog.ui  closedocsdialog.cpp  closedocsdialog.h  closedocswidget.ui  configdialog.cpp  configdialog.h  connectioneditor.ui  connectionlistwidgetitem.h  connectionmanager.cpp  connectionmanager.h  connectionmanager.ui  connectionmanagerwidget.cpp  connectionmanagerwidget.h  controldialog.cpp  controldialog.h  controlwidget.cpp  controlwidget.h  controlwidget.ui  createconnectiondialog.cpp  createconnectiondialog.h  createconnectionwidget.ui  createfolderdialog.cpp  createfolderdialog.h  createfolderwidget.ui  createitemdialog.cpp  createitemdialog.h  createitemwidget.ui  createnodewidget.ui  createnotedialog.h  createnotewidget.ui  filebrowser.cpp  filebrowser.h  filebrowserwidget.cpp  filebrowserwidget.h  filebrowserwidget.ui  networksettingswidget.ui  newfolderwidget.ui  noconnectionswidget.ui  (+18 more)
kobby/editor/: browseritem.cpp  browseritem.h  browsermodel.cpp  browsermodel.h  browserview.cpp  browserview.h  collabdocument.cpp  collabdocument.h  collabsession.cpp  collabsession.h  connection.cpp  connection.h  document.cpp  document.h  documentbuilder.cpp  documentbuilder.h  documentlistview.cpp  documentlistview.h  documentmanager.cpp  documentmanager.h  documentmodel.cpp  documentmodel.h  documenttabwidget.cpp  documenttabwidget.h  documentusersbrowser.cpp  documentusersbrowser.h  filebrowserwidget.cpp  filebrowserwidget.h  itemfactory.cpp  itemfactory.h  localbrowserview.cpp  localbrowserview.h  main.cpp  mainwindow.cpp  mainwindow.h  noteplugin.cpp  noteplugin.h  plugin.cpp  remotebrowserview.cpp  remotebrowserview.h  (+4 more)
kobby/infinote/: connection.cpp  connection.h  infinotemanager.cpp  infinotemanager.h
kobby/ui/: remotechangenotifier.cpp
kte-plugin/: CMakeLists.txt  documentchangetracker.cpp  documentchangetracker.h  kobbyplugin.cpp  kobbyplugin.h  kobbypluginview.cpp  kobbypluginview.h  ktecollaborativeplugin.cpp  ktecollaborativeplugin.h  ktecollaborativepluginview.cpp  ktecollaborativepluginview.h  ktexteditor_collaborative.desktop  ktexteditor_collaborativeui.rc  ktexteditor_kobby.desktop  ktexteditor_kobbyui.rc  manageddocument.cpp  manageddocument.h
kte-plugin/ktpintegration/: CMakeLists.txt  KTp.infinity.client  KTp.infinote-server.client  KTp.infinote.client  clienttubehandler.cpp  connectionswidget.cpp  connectionswidget.h  fileShareRequest.h  infinoted.h.in  inftube-old.cpp  inftube.cpp  inftube.h  inftube_export.h  kte-collaborative.desktop  ktp_kte-collaborative.desktop  org.freedesktop.Telepathy.Client.KTp.infinity.service  org.freedesktop.Telepathy.Client.KTp.infinity.service.in  org.freedesktop.Telepathy.Client.KTp.infinote-server.service.in  org.freedesktop.Telepathy.Client.KTp.infinote.service.in  org.freedesktop.Telepathy.Client.KTp.infinoteServer.service.in  servertubehandler.cpp  tubehandler.cpp
kte-plugin/settings/: kcm_kte_collaborative.cpp  kcm_kte_collaborative.h  ktexteditor_collaborative_config.desktop  ktexteditor_kobby_config.desktop
kte-plugin/ui/: notifywidget.qml  opencollabdocumentdialog.cpp  opencollabdocumentdialog.h  overlay.qml  remotechangenotifier.cpp  remotechangenotifier.h  selecteditorwidget.cpp  selecteditorwidget.h  sharedocumentdialog.cpp  (+3 more)
libinfinitymm/: CMakeLists.txt  ioqsocketnotifier.cpp  ioqsocketnotifier.h  qtio.cpp  qtio.h
notifier-module/: CMakeLists.txt  infinotenotifier.cpp  infinotenotifier.desktop.in  infinotenotifier.h  infinotenotifier.notifyrc
qinfinitymm/: CMakeLists.txt  ioqsocketnotifier.cpp  ioqsocketnotifier.h  qtcpsocketnotifier.cpp  qtcpsocketnotifier.h  qtio.cpp  qtio.h
qlibinfinitymm/: CMakeLists.txt  ioqsocketnotifier.cpp  ioqsocketnotifier.h  qtio.cpp  qtio.h
src/: .gitignore  CMakeLists.txt  addconnectiondialog.cpp  addconnectiondialog.h  configdialog.cpp  connectionmanager.cpp  connectionmanager.h  connectionmanager.ui  connectionmanagerlistitem.cpp  connectionmanagerlistitem.h  document.cpp  document.h  infinotemanager.cpp  infinotemanager.h  joinsessiondialog.cpp  joinsessiondialog.h  joinsessiondialog.ui  kobbyui.rc  plugin.cpp  plugin.h  sessionmanager.cpp  sessionmanager.h  sessionmanager.ui  view.cpp  view.h
tests/: CMakeLists.txt  collaborativeeditingtest.cpp  collaborativeeditingtest.h
(+34 files in other folders)
