PROJECT(qinfinitymm)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

FIND_PACKAGE(Libinfinitymm REQUIRED)

QT4_AUTOMOC(${qinfinitymm_SRCS})

SET(qinfinitymm_SRCS
	qtio.cpp
	ioqsocketnotifier.cpp
)

ADD_LIBRARY(qinfinitymm SHARED
	${qinfinitymm_SRCS}
)

INCLUDE_DIRECTORIES(${LIBINFINITYMM_INCLUDES} ${CMAKE_SOURCE_DIR})

TARGET_LINK_LIBRARIES(qinfinitymm
	${QT_LIBRARIES}
	${LIBINFINITYMM_LIBRARIES}
)

SUBDIRS(test)
